--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "meme-party",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "author": "Matthew Espino",
   "description": "a simple test site that shows memes from reddit",
@@ -10,23 +10,23 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "env-cmd cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.server.js --env.NODE_ENV=development --progress",
+    "start": "env-cmd cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.server.js --env.NODE_ENV=development",
     "build:dev": "cross-env NODE_ENV=development webpack --config configs/webpack.dev.js --env.NODE_ENV=development --progress",
     "build:prod": "cross-env NODE_ENV=production webpack --config configs/webpack.prod.js --env.NODE_ENV=production --progress"
   },
   "dependencies": {
-    "polyfill-library": "^3.93.0",
-    "simplebar": "^5.2.0"
+    "polyfill-library": "^3.94.0",
+    "simplebar": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/runtime": "^7.10.2",
-    "autoprefixer": "^9.8.0",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/runtime": "^7.10.3",
+    "autoprefixer": "^9.8.4",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.5.3",
+    "css-loader": "^3.6.0",
     "env-cmd": "^10.1.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
@@ -35,13 +35,13 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "remove-files-webpack-plugin": "^1.4.2",
-    "sass": "^1.26.8",
+    "remove-files-webpack-plugin": "^1.4.3",
+    "sass": "^1.26.9",
     "sass-loader": "^8.0.2",
-    "terser-webpack-plugin": "^3.0.3",
+    "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.43.0",
     "webpack-assets-manifest": "^3.1.1",
-    "webpack-cli": "^3.3.11",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-manifest-plugin": "^2.2.0"
   },
