--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   ],
   "license": "MIT",
   "scripts": {
-    "test:serve": "env-cmd cross-env NODE_ENV=development USE_CASE=serve node webpack.config.js",
-    "test:dev": "cross-env NODE_ENV=development USE_CASE=dev node webpack.config.js",
-    "test:prod": "cross-env NODE_ENV=production USE_CASE=prod node webpack.config.js",
+    "see:serve": "env-cmd cross-env NODE_ENV=development USE_CASE=serve SEE_RUN=true node webpack-log-config.js",
+    "see:dev": "cross-env NODE_ENV=development USE_CASE=dev SEE_RUN=true node webpack-log-config.js",
+    "see:prod": "cross-env NODE_ENV=production USE_CASE=prod SEE_RUN=true node webpack-log-config.js",
     
-    "start": "env-cmd cross-env NODE_ENV=development USE_CASE=serve webpack-dev-server --config configs/webpack.server.js --env.NODE_ENV=development",
-    "build:dev": "cross-env NODE_ENV=development USE_CASE=dev webpack --config configs/webpack.dev.js --env.NODE_ENV=development --progress",
-    "build:prod": "cross-env NODE_ENV=production USE_CASE=prod webpack --config configs/webpack.prod.js --env.NODE_ENV=production --progress"
+    "start": "env-cmd cross-env NODE_ENV=development USE_CASE=serve webpack-dev-server --env.NODE_ENV=development",
+    "build:dev": "cross-env NODE_ENV=development USE_CASE=dev webpack --env.NODE_ENV=development --progress",
+    "build:prod": "cross-env NODE_ENV=production USE_CASE=prod webpack --env.NODE_ENV=production --progress"
   },
   "dependencies": {
     "polyfill-library": "^3.94.0",
