--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.0.0",
   "private": true,
   "author": "Matthew Espino",
-  "description": "a simple test site that shows memes from reddit",
+  "description": "A fun site that shows random memes from reddit",
   "keywords": [
     "memes",
     "reddit"
@@ -35,7 +35,6 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
     "remove-files-webpack-plugin": "^1.4.3",
