--- a/package.json
+++ b/package.json
@@ -10,41 +10,37 @@
   ],
   "license": "MIT",
   "scripts": {
-    "see:serve": "env-cmd cross-env NODE_ENV=development USE_CASE=serve SEE_RUN=true node webpack-log-config.js",
-    "see:dev": "cross-env NODE_ENV=development USE_CASE=dev SEE_RUN=true node webpack-log-config.js",
-    "see:prod": "cross-env NODE_ENV=production USE_CASE=prod SEE_RUN=true node webpack-log-config.js",
-    "start": "env-cmd cross-env NODE_ENV=development USE_CASE=serve webpack-dev-server --env.NODE_ENV=development",
-    "build:dev": "cross-env NODE_ENV=development USE_CASE=dev webpack --env.NODE_ENV=development --progress",
-    "build:prod": "cross-env NODE_ENV=production USE_CASE=prod webpack --env.NODE_ENV=production --progress"
+    "log:serve": "cross-env NODE_ENV=development USE_CASE=serve LOG_RUN=true node webpack-log.config.js",
+    "log:dev": "cross-env NODE_ENV=development USE_CASE=dev LOG_RUN=true node webpack-log.config.js",
+    "log:prod": "cross-env NODE_ENV=production USE_CASE=prod LOG_RUN=true node webpack-log.config.js",
+    "start": "cross-env NODE_ENV=development USE_CASE=serve webpack serve",
+    "build:dev": "cross-env NODE_ENV=development USE_CASE=dev webpack --progress",
+    "build:prod": "cross-env NODE_ENV=production USE_CASE=prod webpack --progress"
   },
   "dependencies": {
-    "polyfill-library": "^3.95.0",
-    "simplebar": "^5.2.1"
+    "@babel/runtime": "^7.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
-    "autoprefixer": "^9.8.4",
+    "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
-    "env-cmd": "^10.1.0",
+    "css-loader": "^5.0.0",
+    "css-minimizer-webpack-plugin": "^1.1.5",
+    "dotenv": "^8.2.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
+    "mini-css-extract-plugin": "^1.2.1",
+    "postcss": "^8.1.4",
+    "postcss-loader": "^4.0.4",
     "remove-files-webpack-plugin": "^1.4.3",
     "sass": "^1.26.9",
-    "sass-loader": "^9.0.0",
-    "terser-webpack-plugin": "^3.0.6",
-    "webpack": "^4.43.0",
+    "sass-loader": "^10.0.4",
+    "webpack": "^5.3.1",
     "webpack-assets-manifest": "^3.1.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.1.0"
   },
   "browserslist": "defaults",
   "sideEffects": false
