--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "sass-loader": "^10.0.4",
     "webpack": "^5.3.1",
     "webpack-assets-manifest": "^3.1.1",
-    "webpack-cli": "^4.1.0"
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^4.0.0-beta.0"
   },
   "browserslist": "defaults",
   "sideEffects": false
