--- a/package.json
+++ b/package.json
@@ -18,30 +18,29 @@
     "build:prod": "cross-env NODE_ENV=production USE_CASE=prod webpack --progress"
   },
   "dependencies": {
-    "@babel/runtime": "^7.10.4"
+    "@babel/runtime": "^7.20.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "autoprefixer": "^10.0.1",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.2",
     "cross-env": "^7.0.2",
-    "css-loader": "^5.0.0",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "dotenv": "^8.2.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^1.2.1",
-    "postcss": "^8.1.4",
-    "postcss-loader": "^4.0.4",
-    "remove-files-webpack-plugin": "^1.4.3",
-    "sass": "^1.26.9",
-    "sass-loader": "^10.0.4",
-    "webpack": "^5.3.1",
-    "webpack-assets-manifest": "^3.1.1",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^4.0.0-beta.0"
+    "css-loader": "^6.7.3",
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "dotenv": "^16.0.3",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "remove-files-webpack-plugin": "^1.5.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "webpack": "^5.75.0",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "browserslist": "defaults",
   "sideEffects": false
